client/src/App.css
/* General Styles */
body {
    font-family: "Poppins", sans-serif;
    font-weight: 400;
    font-style: normal;

    background-color: #fcd0a1;
    color: #6d1a36;

    margin: 0;
    padding: 0;
}

main {
    padding: 20px 60px;
}

h1, h2, h3, h4 {
    font-family: "DynaPuff", system-ui;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-variation-settings:
      "wdth" 100;
}

.general {
    text-align: center;
    font-size: 1.2rem;
}

.center {
    margin: 0% 20%;
}

/* Navbar Styles */
.nav {
    background-color: #b1b695;
    display: flex;
    padding: 0px 5%;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);

    font-family: "DynaPuff", system-ui;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-variation-settings:
      "wdth" 100;

    align-items: center;
}

.logo {
    margin-right: 30%;
}

.tabs {
    display: flex;
    gap: 70px;
    margin-left: 5%;
    margin-right: 5%;
    font-size: 1.1rem;
}

nav h1:hover {
    cursor: pointer;
    color: #bc2d45;
}

nav p:hover {
    cursor: pointer;
    color: #bc2d45;
}

button {
   background-color: #b1b695;
   display: inline-block;
   margin: 10px;
   font-size: 0.95rem;
   border: solid;
   border-radius: 10px;
   padding: 10px;
   color: #6d1a36;

   font-family: "DynaPuff", system-ui;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-variation-settings:
      "wdth" 100;
}

button:hover {
    cursor: pointer;
    background-color: #dcdecf;
}

/* Modal Styles */
.modal-overlay {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;
}

.modal-content {
    background-color: #b1b695;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
    text-align: center;
}

/* Home Page */
.general-description {
    padding: 0% 15%;
    font-size: 1.4rem;
}

.homepage {
    padding: 0% 10%;
}

.homepage-column {
    display: flex;
    flex-direction: column;
    width: 50%;
    justify-content: center;
    margin: 0px 50px;
}

.row {
    display: flex;
    flex-direction: row;
    width: 100%;
    margin-top: 50px;
}

.homepage-picture {
    width: 50%;
    height: 300px;
    border-radius: 25px;
    margin: 0px 50px;
}

/* About Page */
.about {
    text-align: center;
    font-size: 1.15rem;
    line-height: 1.5;
    margin: 0px 90px;
}

.about-pictures {
    height: 500px;
    margin: 0px 25px;
    border-radius: 20px;
}

/* Stages Cards */
.card {
    border: solid 2px #6d1a36;
    border-radius: 20px;
    margin: 10px;
    padding: 5px;
    background-color: #fcd0a1;
    font-size: 1.3rem;
}

/* Dashboard */
.dashboard {
    font-size: 1.2rem;

}

.pet-plan-info {
    display: flex;
    gap: 60px;
    margin: 50px 5px;
    justify-content: center;
}

.plans {
    /* display: flex; */
    /* flex-direction: column; */
    width: 40%;
    /* padding: 0px 10px; */
    text-align: center;

    /* background-color: #f1e4d1; */
    background-color: #f7e8c6;
    border-radius: 30px;
}
.pet-list {
    display: flex;
    flex-direction: column;
    
    width: 40%;
    text-align: center;

    background-color: #f7e8c6;
    border-radius: 30px;
    padding: 0px 15px 10px;
}

.pet-icon {
    height: 75px;
}

.pet-row {
    display: flex;
}

.icon-side {
    display: flex;
    flex-direction: column;
    width: 40%;
    justify-content: center;
}

.pet {
    width: 70%;
    margin: 10px 15%;
}

.motivation {
    display: flex;
    justify-content: right;
    margin: 40px 0px;
}

